--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+hex = "0.4.3"
+reqwest = "0.12.7"
+ring = "0.17.8"
+seahorse = "2.2.0"
+serde_json = "1.0.128"
