--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,10 @@ edition = "2021"
 
 [dependencies]
 hex = "0.4.3"
-reqwest = "0.12.7"
+reqwest = { version = "0.12.7", features = ["blocking", "json"] }
 ring = "0.17.8"
 seahorse = "2.2.0"
+serde = "1.0.210"
 serde_json = "1.0.128"
+time = "0.3.36"
+toml = "0.8.19"
