--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ hex = "0.4.3"
 reqwest = { version = "0.12.7", features = ["blocking", "json"] }
 ring = "0.17.8"
 seahorse = "2.2.0"
-serde = "1.0.210"
+serde = { version = "1.0.210", features = ["derive"] }
 serde_json = "1.0.128"
 time = "0.3.36"
 toml = "0.8.19"
