--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 hex = "0.4.3"
+mockito = "1.5.0"
 reqwest = { version = "0.12.7", features = ["blocking", "json"] }
 ring = "0.17.8"
 seahorse = "2.2.0"
